<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"


            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHomeMileNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="40dp"
                android:text="55.39" />

            <TextView
                android:id="@+id/tvMileUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:textSize="20dp"
                android:text="@string/miles_label" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTotalMile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25dp"
                android:text="@string/accumulated_mileage_label" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:layout_weight="1">

                    <TextView
                        android:id="@+id/tvHomeTimesNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=""
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/tvTimeUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:text="@string/times_label"
                        android:textSize="10dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvTotalRunningWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_running_label" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:layout_weight="1">

                    <TextView
                        android:id="@+id/tvHomeHourNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=""
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/tvHourUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:text="@string/hours_label"
                        android:textSize="10dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvTotalHourWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_hours_label" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvHomeAvgMileNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=""
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/tvHomeAvgMileUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:text="@string/miles_label"
                        android:textSize="10dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvAvgMileWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/average_mileage_label" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvHomeAvgPaceNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=""
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/tvHomeHolder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:text="" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvAvgPaceWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/average_pace_label" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="horizontal">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_nav_menu"/>
    </LinearLayout>

</LinearLayout>